email verification code

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ DB_USER=root
 DB_PASSWORD=WillW@re12 
 DB_NAME=wwslotbooking
 DB_PORT=3306 
+EMAIL_USER=adithyanangular@gmail.com
+EMAIL_PASS=qfwq kvyl mmzh ngpe
 
 # Server Configuration  
 SERVER_PORT=8800  
