--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "otp-generator": "^4.0.1"
   },
   "name": "ww-slot-booking-backend",
   "version": "1.0.0",
