--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=WillW@re12 
+DB_PASSWORD=12345 
 DB_NAME=wwslotbooking
 DB_PORT=3306 
 EMAIL_USER=adithyanangular@gmail.com
