token_logics_refactored

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ DB_NAME=wwslotbooking
 DB_PORT=3306 
 EMAIL_USER=adithyanangular@gmail.com
 EMAIL_PASS=qfwq kvyl mmzh ngpe
+GOOGLE_CLIENT_ID=981381023123-ts2rl2ejksonqkepnr5u6fea0jcflslc.apps.googleusercontent.com
+JWT_SECRET=asdfghjklqwertyuiopzxcvbnm
+
 
 # Server Configuration  
 SERVER_PORT=8800  
