--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.4",
+    "mysql2": "^3.12.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
